feat(initial-pet-world-app): inicia petWorldApp com pages ja criadas

--- a/petWorld/petWorldApp/templates/petWorld/produtos/produtos.html
+++ b/petWorld/petWorldApp/templates/petWorld/produtos/produtos.html
@@ -3,7 +3,9 @@
     <head>
         <title>Pet World</title>
         <meta charset="utf-8">
-        <link rel="stylesheet" href="produtos.css">
+        {% load static %}
+        
+        <link rel="stylesheet" href="{% static 'petWorld/produtos/produtos.css' %}">
         <link rel='stylesheet' href='https://fonts.googleapis.com/css?family=Itim'>
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.11.2/css/all.css">
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
@@ -12,7 +14,7 @@
         <nav class="horizontal-menu">
             <div class="logo">
                 <a href="#">
-                    <img src="../assets/figures/logo.png" alt="Logo" width="120" height="96" class="d-inline-block align-text-top">
+                    <img src="{% static 'petWorld/figures/logo.png' %}" alt="Logo" width="120" height="96" class="d-inline-block align-text-top">
                 </a>
             </div>
             <div class="navbar-options">
@@ -57,12 +59,58 @@
                 </div>
             </div>
         </section>
+
+        <section class="buy-section">
+            <div class="buy-section-body">
+                <div class="buy-section-filter">
+                    <div class="filter-breadcrumbs">
+                        <a class="breadcrumb" href="/">Home</a>
+                        <a class="breadcrumb" href="/produtos">Produtos</a>
+                    </div>
+
+                    <div class="buy-section-select">
+                        <label for="busca">Ordenar por</label>
+                        <select class="busca-ordem" name="options" id="busca">
+                          <option>Selecionar</option>
+                          <option value="saab">Mais comprado</option>
+                          <option value="mercedes">Mais barato</option>
+                        </select> 
+                    </div>
+                </div>
+                <div class="buy-section-products">
+                    <div class="search">
+                        <div class="input-search">
+                            <input class="search-input" type="text">
+                        </div>
+                        <div class="options-search">
+                            <div class="option">
+                                <div class="name-option">Todos</div>
+                                <div class="number-option">50</div>
+                            </div>
+                            <div class="option">
+                                <div class="name-option">Ração</div>
+                                <div class="number-option">12</div>
+                            </div>
+                            <div class="option">
+                                <div class="name-option">Casinha</div>
+                                <div class="number-option">5</div>
+                            </div>
+                            <div class="option">
+                                <div class="name-option">Roupas</div>
+                                <div class="number-option">33</div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="cards"></div>
+                </div>
+            </div>
+        </section>
            
         <footer class="footer-menu">
             <div class="footer-menu-infos">
                 <div class="logo">
                     <a href="#">
-                        <img src="../assets/figures/logo_2.png" alt="Logo" class="d-inline-block align-text-top">
+                        <img src="{% static 'petWorld/figures/logo_2.png' %}" alt="Logo" class="d-inline-block align-text-top">
                     </a>
                     <span>Tudo para seu pet</span>
                 </div>
@@ -72,13 +120,13 @@
                     </div>
                     <div class="infos">
                         <div class="info">
-                            <svg width="50" height="50" viewBox="0 0 50 50" fill="none" xmlns="http://www.w3.org/2000/svg">
+                            <svg width="50" height="530" viewBox="0 0 50 50" fill="none" xmlns="http://www.w3.org/2000/svg">
                                 <path d="M25 13.7255C22.7701 13.7255 20.5903 14.3867 18.7362 15.6256C16.8821 16.8644 15.4371 18.6253 14.5837 20.6854C13.7304 22.7456 13.5071 25.0125 13.9421 27.1995C14.3772 29.3866 15.4509 31.3955 17.0277 32.9723C18.6045 34.5491 20.6134 35.6228 22.8005 36.0579C24.9875 36.4929 27.2544 36.2696 29.3146 35.4163C31.3747 34.5629 33.1356 33.1179 34.3744 31.2638C35.6133 29.4097 36.2745 27.2299 36.2745 25C36.2706 22.011 35.0815 19.1456 32.968 17.032C30.8544 14.9185 27.989 13.7294 25 13.7255ZM25 33.3333C23.3518 33.3333 21.7407 32.8446 20.3702 31.9289C18.9998 31.0132 17.9317 29.7117 17.301 28.189C16.6703 26.6663 16.5052 24.9908 16.8268 23.3742C17.1483 21.7577 17.942 20.2729 19.1074 19.1074C20.2729 17.942 21.7577 17.1483 23.3742 16.8268C24.9908 16.5052 26.6663 16.6703 28.189 17.301C29.7117 17.9317 31.0132 18.9998 31.9289 20.3702C32.8446 21.7407 33.3333 23.3518 33.3333 25C33.3333 27.2101 32.4554 29.3298 30.8926 30.8926C29.3298 32.4554 27.2101 33.3333 25 33.3333ZM36.7647 0H13.2353C9.72627 0.00389243 6.36208 1.39957 3.88083 3.88083C1.39957 6.36208 0.00389243 9.72627 0 13.2353V36.7647C0.00389243 40.2737 1.39957 43.6379 3.88083 46.1192C6.36208 48.6004 9.72627 49.9961 13.2353 50H36.7647C40.2737 49.9961 43.6379 48.6004 46.1192 46.1192C48.6004 43.6379 49.9961 40.2737 50 36.7647V13.2353C49.9961 9.72627 48.6004 6.36208 46.1192 3.88083C43.6379 1.39957 40.2737 0.00389243 36.7647 0ZM47.0588 36.7647C47.0588 39.4949 45.9743 42.1132 44.0437 44.0437C42.1132 45.9743 39.4949 47.0588 36.7647 47.0588H13.2353C10.5051 47.0588 7.88678 45.9743 5.95625 44.0437C4.02573 42.1132 2.94118 39.4949 2.94118 36.7647V13.2353C2.94118 10.5051 4.02573 7.88678 5.95625 5.95625C7.88678 4.02573 10.5051 2.94118 13.2353 2.94118H36.7647C39.4949 2.94118 42.1132 4.02573 44.0437 5.95625C45.9743 7.88678 47.0588 10.5051 47.0588 13.2353V36.7647ZM40.1961 12.2549C40.1961 12.7397 40.0523 13.2135 39.783 13.6166C39.5137 14.0197 39.1309 14.3338 38.683 14.5193C38.2352 14.7048 37.7424 14.7534 37.2669 14.6588C36.7915 14.5642 36.3548 14.3308 36.012 13.988C35.6692 13.6452 35.4358 13.2085 35.3412 12.7331C35.2466 12.2576 35.2952 11.7648 35.4807 11.317C35.6662 10.8691 35.9803 10.4863 36.3834 10.217C36.7865 9.94767 37.2603 9.80392 37.7451 9.80392C38.3951 9.80392 39.0186 10.0621 39.4782 10.5218C39.9379 10.9814 40.1961 11.6049 40.1961 12.2549Z" fill="#9F9F9F"/>
                             </svg>
-                            <svg width="50" height="50" viewBox="0 0 50 50" fill="none" xmlns="http://www.w3.org/2000/svg">
+                            <svg width="50" height="30" viewBox="0 0 50 50" fill="none" xmlns="http://www.w3.org/2000/svg">
                                 <path d="M25 0C20.0555 0 15.222 1.46622 11.1108 4.21326C6.99952 6.96029 3.79521 10.8648 1.90302 15.4329C0.0108317 20.0011 -0.484251 25.0277 0.480379 29.8773C1.44501 34.7268 3.82603 39.1813 7.32234 42.6777C10.8187 46.174 15.2732 48.555 20.1227 49.5196C24.9723 50.4842 29.9989 49.9892 34.5671 48.097C39.1352 46.2048 43.0397 43.0005 45.7867 38.8892C48.5338 34.778 50 29.9445 50 25C49.9922 18.372 47.3558 12.0176 42.6691 7.33093C37.9823 2.6442 31.628 0.00778394 25 0ZM26.4706 47.0098V30.3921H32.8431C33.2332 30.3921 33.6072 30.2372 33.883 29.9614C34.1588 29.6856 34.3137 29.3116 34.3137 28.9216C34.3137 28.5315 34.1588 28.1575 33.883 27.8817C33.6072 27.6059 33.2332 27.451 32.8431 27.451H26.4706V21.0784C26.4706 19.9084 26.9354 18.7862 27.7628 17.9588C28.5901 17.1315 29.7123 16.6667 30.8824 16.6667H34.8039C35.1939 16.6667 35.568 16.5117 35.8438 16.2359C36.1196 15.9601 36.2745 15.5861 36.2745 15.1961C36.2745 14.8061 36.1196 14.432 35.8438 14.1562C35.568 13.8804 35.1939 13.7255 34.8039 13.7255H30.8824C28.9322 13.7255 27.062 14.5002 25.683 15.8791C24.3041 17.2581 23.5294 19.1283 23.5294 21.0784V27.451H17.1569C16.7668 27.451 16.3928 27.6059 16.117 27.8817C15.8412 28.1575 15.6863 28.5315 15.6863 28.9216C15.6863 29.3116 15.8412 29.6856 16.117 29.9614C16.3928 30.2372 16.7668 30.3921 17.1569 30.3921H23.5294V47.0098C17.8192 46.6283 12.4807 44.0424 8.64144 39.7983C4.80215 35.5542 2.76259 29.9841 2.95346 24.2643C3.14433 18.5446 5.5507 13.1228 9.66438 9.14413C13.7781 5.16543 19.277 2.94123 25 2.94123C30.723 2.94123 36.2219 5.16543 40.3356 9.14413C44.4493 13.1228 46.8557 18.5446 47.0466 24.2643C47.2374 29.9841 45.1979 35.5542 41.3586 39.7983C37.5193 44.0424 32.1808 46.6283 26.4706 47.0098Z" fill="#9F9F9F"/>
                             </svg>
-                            <svg width="57" height="50" viewBox="0 0 57 50" fill="none" xmlns="http://www.w3.org/2000/svg">
+                            <svg width="57" height="30" viewBox="0 0 57 50" fill="none" xmlns="http://www.w3.org/2000/svg">
                                 <path d="M56.2669 7.37052C56.1465 7.07877 55.9422 6.82931 55.6799 6.65368C55.4176 6.47805 55.1092 6.38414 54.7935 6.38383H46.3895C45.3261 4.46617 43.773 2.86496 41.8887 1.74361C40.0044 0.622266 37.8563 0.0209315 35.6636 0.000981155C34.071 -0.0194277 32.4905 0.278741 31.0148 0.877959C29.5391 1.47718 28.1982 2.36535 27.0707 3.49027C25.9087 4.63037 24.9863 5.99128 24.3579 7.49298C23.7294 8.99469 23.4076 10.6069 23.4112 12.2348V14.5379C12.2412 11.8784 3.03924 2.69774 2.93286 2.60199C2.71854 2.38916 2.44822 2.24153 2.15332 2.17625C1.85841 2.11098 1.55103 2.13074 1.26692 2.23324C0.982799 2.33575 0.733609 2.51679 0.54831 2.75531C0.363012 2.99384 0.249216 3.28006 0.22015 3.5807C-0.910147 16.139 2.72542 24.5244 5.97536 29.3488C7.65543 31.8761 9.72642 34.1203 12.1109 35.9976C7.99127 41.0507 1.11641 43.681 1.04194 43.7102C0.814821 43.7943 0.609808 43.9289 0.442436 44.1039C0.275065 44.279 0.149726 44.4898 0.075918 44.7204C0.00210977 44.9511 -0.0182327 45.1955 0.0164333 45.4352C0.0510992 45.6749 0.139863 45.9035 0.276 46.1038C0.539293 46.4974 3.14031 50 12.2412 50C30.8259 50 46.3442 35.6386 47.8309 17.1975L55.9212 9.10985C56.1444 8.88663 56.2964 8.60224 56.3579 8.29263C56.4195 7.98303 56.3878 7.66212 56.2669 7.37052ZM45.1554 15.3624C44.8806 15.6366 44.7151 16.0015 44.69 16.389C43.6049 33.4471 29.3499 46.8086 12.2412 46.8086C8.51786 46.8086 6.18812 46.1676 4.77857 45.532C7.78383 44.0214 12.6827 41.0427 15.6959 36.5242C15.8161 36.3434 15.8981 36.1401 15.937 35.9265C15.9759 35.713 15.9707 35.4937 15.922 35.2822C15.8727 35.0693 15.7802 34.8689 15.6503 34.6932C15.5204 34.5175 15.3558 34.3704 15.1667 34.261C15.1321 34.2397 11.6747 32.1706 8.51786 27.4207C4.79453 21.8091 3.01531 15.0087 3.19882 7.14978C7.15618 10.5008 15.3183 16.482 24.7409 18.0538C24.9698 18.0925 25.2044 18.0808 25.4283 18.0195C25.6522 17.9582 25.8601 17.8487 26.0373 17.6988C26.2146 17.5489 26.357 17.3621 26.4546 17.1515C26.5523 16.9409 26.6028 16.7115 26.6026 16.4794V12.2348C26.6002 11.0296 26.8387 9.83617 27.304 8.72452C27.7694 7.61287 28.4524 6.60546 29.3127 5.76151C30.141 4.93446 31.1261 4.28118 32.2103 3.84001C33.2945 3.39884 34.4559 3.17867 35.6264 3.19241C39.1981 3.23762 42.5411 5.41843 43.9347 8.61783C44.0589 8.90244 44.2635 9.14462 44.5233 9.31468C44.7831 9.48475 45.0869 9.57531 45.3975 9.57526H50.9399L45.1554 15.3624Z" fill="#9F9F9F"/>
                             </svg>                                                                
                         </div>
