feat(page-home): estrutura arquivos estaticos de forma separada

--- a/petWorld/petWorldApp/templates/petWorld/home/chamada.html
+++ b/petWorld/petWorldApp/templates/petWorld/home/chamada.html
@@ -1,4 +1,5 @@
 {% load static %}
+<link rel="stylesheet" href="{% static 'petWorld/home/chamada.css' %}">
 
 {% block chamada %}
 <section class="website-call">
