--- a/petWorld/petWorldApp/templates/petWorld/base/base.html
+++ b/petWorld/petWorldApp/templates/petWorld/base/base.html
@@ -6,7 +6,9 @@
         <title>Pet World</title>
         <meta charset="utf-8">
         
-        <link rel="stylesheet" href="{% static 'petWorld/home/home.css' %}">
+        <link rel="stylesheet" href="{% static 'petWorld/base/base.css' %}">
+        <link rel="stylesheet" href="{% static 'petWorld/base/header.css' %}">
+        <link rel="stylesheet" href="{% static 'petWorld/base/footer.css' %}">
         <link rel='stylesheet' href='https://fonts.googleapis.com/css?family=Itim'>
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.11.2/css/all.css">
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
