--- a/petWorld/petWorldApp/templates/petWorld/base/header.html
+++ b/petWorld/petWorldApp/templates/petWorld/base/header.html
@@ -2,7 +2,7 @@
 
 <nav class="horizontal-menu">
     <div class="logo">
-        <a href="#">
+        <a href="/">
             <img src="{% static 'petWorld/figures/logo.png' %}" alt="Logo" width="120" height="96" class="d-inline-block align-text-top">
         </a>
     </div>
