--- a/petWorld/petWorldApp/templates/petWorld/base/header.html
+++ b/petWorld/petWorldApp/templates/petWorld/base/header.html
@@ -10,8 +10,15 @@
         <div class="navbar-option">
             <a class="nav-link">NOVO</a>
         </div>
-        <div class="navbar-option">
-            <a class="nav-link">CATEGORIAS</a>
+        <div class="navbar-option dropdown">
+            <a class="nav-link dropbtn">CATEGORIAS</a>
+            <div class="dropdown-content">
+                <a class="nav-link" href="/produtos/Dogs">Doguinho</a>
+                <a class="nav-link" href="/produtos/Cats">Gatíneo</a>
+                <a class="nav-link" href="/produtos/Peixes">Peixínho</a>
+                <a class="nav-link" href="/produtos/Aves">Aves</a>
+                <a class="nav-link" href="/produtos/Roedores">Roedores</a>
+            </div>
         </div>
         <div class="navbar-option">
             <a class="nav-link">SOBRE NÓS</a>
