--- a/petWorld/petWorldApp/static/petWorld/base/footer.css
+++ b/petWorld/petWorldApp/static/petWorld/base/footer.css
@@ -1,15 +1,23 @@
 .footer-menu {
-    height: 568px;
+    width: 100%;
     background: #FFFFFF;
     border-top: 1px solid #6C6C6C;
     display: grid;
     align-content: space-between;
+    font-size: 2rem;
 }
 
 .footer-menu .footer-menu-infos {
     display: flex;
-    padding: 88px 51px 92px 74px;
     justify-content: space-between;
+    padding: 50px;
+}
+
+.logo-footer{
+    max-width: 188px;
+    max-height: 150px;
+    width: auto;
+    height: auto;
 }
 
 .footer-menu .footer-menu-infos .logo {
@@ -22,26 +30,25 @@
     display: grid;
     gap: 42px;
     align-content: start;
-    padding-top: 9px;
+    padding-top: 2vw;
 }
 
 .footer-menu .footer-menu-infos .info-title {
-    font-size: 28px;
-    line-height: 34px;
-
     color: #535353;
+    line-height: 1px;
 }
 
 .footer-menu .footer-menu-infos .infos {
-    font-size: 28px;
-    line-height: 34px;
-    gap: 25px;
+    gap: 0.3vw;
     display: grid;
     color: #9F9F9F;
 }
 
+.svg-info{
+    margin-right: 10px;
+}
+
 .footer-menu .footer-menu-license {
-    height: 137px;
     background: #EBEBEB;
     text-align: center;
     display: flex;
@@ -49,8 +56,8 @@
     justify-content: center;
 
     font-weight: 400;
-    font-size: 24px;
-    line-height: 29px;
 
     color: #888888;
+
+    padding: 20px;
 }
