--- a/petWorld/petWorldApp/static/petWorld/base/header.css
+++ b/petWorld/petWorldApp/static/petWorld/base/header.css
@@ -14,7 +14,8 @@
     padding-right: 330px;
 }
 
-.horizontal-menu .navbar-options .nav-link {
+.horizontal-menu .navbar-options .nav-link,
+.user-menu-option-link{
     cursor: pointer;
     color: #646464 !important;
 }
@@ -22,7 +23,8 @@
 /* Style The Dropdown Button */
 
 /* The container <div> - needed to position the dropdown content */
-.horizontal-menu .navbar-options .dropdown {
+.horizontal-menu .navbar-options .dropdown,
+.horizontal-menu .user-menu-options .dropdown {
     position: relative;
     display: inline-block;
 }
@@ -38,18 +40,33 @@
     border-radius: 0 0 25px 25px;
 }
 
+.horizontal-menu .user-menu-options .dropdown-content {
+    display: none;
+    position: absolute;
+    background-color: #f9f9f9;
+    right: -40px;
+    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+    z-index: 1;
+    border-radius: 0 0 25px 25px;
+}
+
 /* Links inside the dropdown */
-.horizontal-menu .navbar-options .dropdown-content a {
+.horizontal-menu .navbar-options .dropdown-content a,
+.horizontal-menu .user-menu-options .dropdown-content a {
     padding: 12px 16px;
     text-decoration: none;
     display: block;
 }
   
 /* Change color of dropdown links on hover */
-.horizontal-menu .navbar-options .dropdown-content a:hover {background-color: #f1f1f1}
+.horizontal-menu .navbar-options .dropdown-content a:hover,
+.horizontal-menu .user-menu-options .dropdown-content a:hover {
+    background-color: #f1f1f1
+}
   
 /* Show the dropdown menu on hover */
-.horizontal-menu .navbar-options .dropdown:hover .dropdown-content {
+.horizontal-menu .navbar-options .dropdown:hover .dropdown-content,
+.horizontal-menu .user-menu-options .dropdown:hover .dropdown-content {
     display: block;
 }
 
