--- a/petWorld/petWorldApp/templates/petWorld/login/cadastro.html
+++ b/petWorld/petWorldApp/templates/petWorld/login/cadastro.html
@@ -1,36 +1,33 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Cadastro de usuários</title>
-</head>
-<body>
+{% extends "../base/base.html" %}
+{% load static %}
 
-<form method="post">
+{% block content %}
+<link rel="stylesheet" href="{% static 'petWorld/login/login.css' %}">
+
+<form class="login-form" method="post">
     {% csrf_token %}
 
-    <div class="form-group">
+    <div class="form-group input-login">
         {{form_usuario.username.errors}}
         <label>Username: </label>
         {{form_usuario.username}}
     </div>
 
-    <div class="form-group">
+    <div class="form-group input-login">
         {{form_usuario.password1.errors}}
         <label>Senha: </label>
         {{form_usuario.password1}}
     </div>
 
-    <div class="form-group">
+    <div class="form-group input-login">
         {{form_usuario.password2.errors}}
         <label>Confirmação de senha: </label>
         {{form_usuario.password2}}
     </div>
 
-    <div class="form-group">
-        <input type="submit" value="Cadastrar" class="btn btn-primary">
+    <div class="form-group submit-login">
+        <input type="submit" value="Cadastrar" class="submit-botao">
     </div>
 </form>
 
-</body>
-</html>
+{% endblock content %}
