--- a/petWorld/petWorldApp/templates/petWorld/login/login.html
+++ b/petWorld/petWorldApp/templates/petWorld/login/login.html
@@ -1,28 +1,33 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Title</title>
-</head>
-<body>
-<form method="post">
+{% extends "../base/base.html" %}
+{% load static %}
+
+{% block content %}
+<link rel="stylesheet" href="{% static 'petWorld/login/login.css' %}">
+
+<form class="login-form" method="post">
     {% csrf_token %}
 
-    <div class="form-group">
+    <div class="form-group input-login">
         {{form_login.username.errors}}
         <label>Username: </label>
         {{form_login.username}}
     </div>
 
-    <div class="form-group">
+    <div class="form-group input-login">
         {{form_login.password.errors}}
         <label>Senha: </label>
         {{form_login.password}}
     </div>
 
-    <div class="form-group">
-        <input type="submit" value="Enviar" class="btn btn-primary">
+    <div class="form-group submit-login">
+        <input type="submit" value="Entrar" class="submit-botao">
+    </div>
+
+    <div class="form-group submit-login">
+        <button class="submit-botao">
+            <a href="/cadastrar">Cadastrar</a>
+        </button>
     </div>
 </form>
-</body>
-</html>
+
+{% endblock content %}
