--- a/petWorld/petWorldApp/templates/petWorld/produtos/produtos.html
+++ b/petWorld/petWorldApp/templates/petWorld/produtos/produtos.html
@@ -11,7 +11,7 @@
         </div>
         <div class="figure">
             <img src="{% static product_img %}" alt="{{product_img_alt}}" 
-                width="300" height="300" class="d-inline-block align-text-top">
+                class="figure-image">
         </div>
     </div>
 </section>
