--- a/petWorld/petWorldApp/static/petWorld/produtos/produtos.css
+++ b/petWorld/petWorldApp/static/petWorld/produtos/produtos.css
@@ -123,7 +123,7 @@ svg{
 
 .cards .card {
     width: 325px;
-    height: 368px;
+    height: 433px;
     display: grid;
     align-content: center;
     justify-items: center;
@@ -154,4 +154,12 @@ svg{
     text-align: center;
     font-size: 20px;
     font-family: Inter;
+}
+
+.botao-adicionar-pedido{
+    width: 250px;
+    height: 45px;
+    border-radius: 45px;
+    background: #D9D9D9;
+    font-size: 21px;
 }
